# open62541-zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  prj.conf
