cmake_minimum_required(VERSION 3.15.0)


# Prepare open62541

set(CONFIG_OPEN62541 ON)
set(UA_ARCHITECTURE zephyr CACHE STRING "" FORCE)
set(UA_ENABLE_XML_ENCODING OFF CACHE BOOL "" FORCE)
set(UA_ENABLE_HISTORIZING OFF CACHE BOOL "" FORCE)
set(UA_ENABLE_JSON_ENCODING OFF CACHE BOOL "" FORCE)
set(UA_ENABLE_NODESETLOADER OFF CACHE BOOL "" FORCE)
set(UA_ENABLE_PARSING OFF CACHE BOOL "" FORCE)
set(UA_NAMESPACE_ZERO "MINIMAL" CACHE STRING "" FORCE)
set(UA_ENABLE_PUBSUB OFF CACHE BOOL "" FORCE)

set(UA_ENABLE_SUBSCRIPTIONS_EVENTS OFF CACHE BOOL "" FORCE)
set(UA_ENABLE_SUBSCRIPTIONS OFF CACHE BOOL "" FORCE)
set(UA_ENABLE_PUBSUB_INFORMATIONMODEL OFF CACHE BOOL "" FORCE)
set(UA_MULTITHREADING 0 CACHE STRING "" FORCE)
set(UA_ENABLE_DISCOVERY_SEMAPHORE OFF CACHE BOOL "" FORCE)


# Prepare zephyr

set(CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/prj.conf)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})


# Prepare application

project(open62541_app_project LANGUAGES C)
set (APP_NAME app)

target_sources(${APP_NAME} PRIVATE
    src/main.c
)

target_include_directories(${APP_NAME} PRIVATE
    src
)

add_subdirectory(src/third_party/open62541)

target_link_libraries(${APP_NAME} PUBLIC open62541)
